--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About </h4>
-          <p class="left-align light"></p>
+          <p class="left-align light">A midwesterner by birth and a gypsy at heart, my journey up to this point has been a long and meandering one, both professionally and geographically.  In the many moves my family and I have made, I have worked in a variety of fields from retail to accounting to pharmacy.  Despite the seemingly incongruous lineup of careers, I have discovered some common themes throughout:  problem-solving, design, and collaboration.</p>  
+          <p class="left-align light">Software development, for me, is a culmination of all of these skills along with my love of learning and experiencing new things.  The ever-changing nature of technology means there is always some new avenue to explore and while I have yet to do more than scratch the surface of this wealth of knowledge, I am excited to discover where development will take me in years to come.</p>
         </div>
       </div>
 
@@ -88,7 +89,7 @@
 
 
             <p class="light">A homework tracking app that parents can use to monitor the progress of all of their children.  Using a points based reward system, HomeWork motivates kids to complete assignments in a timely manner and encourages them to read outside of school.</p>
-            <p class="center"><a href="#">Project Link</a></p>
+            <p class="center"><a href="#">Project Link: Coming Soon!</a></p>
           </div>
         </div>
 
@@ -123,7 +124,7 @@
 
       <div class="row">
         <div class="col s3">
-          <img src="/tech/angular.png">
+          <img src="angular.png">
         </div>
         <div class="col s3">
           <img src="/tech/Bootstrap.png">
