fixed img issue

--- a/index.html
+++ b/index.html
@@ -127,61 +127,61 @@
           <img src="angular.png">
         </div>
         <div class="col s3">
-          <img src="/tech/Bootstrap.png">
+          <img src="Bootstrap.png">
         </div>
         <div class="col s3">
-          <img src="/tech/Bower.png">
+          <img src="Bower.png">
         </div>
         <div class="col s3">
-          <img src="/tech/cSharp.png">
+          <img src="cSharp.png">
         </div>
         <div class="col s3">
-          <img src="/tech/css.png">
+          <img src="css.png">
         </div>
         <div class="col s3">
-          <img src="/tech/dotNet.png">
+          <img src="dotNet.png">
         </div>
         <div class="col s3">
-          <img src="/tech/firebase.png">
+          <img src="firebase.png">
         </div>
         <div class="col s3">
-          <img src="/tech/git.png">
+          <img src="git.png">
         </div>
         <div class="col s3">
-          <img src="/tech/github.png">
+          <img src="github.png">
         </div>
         <div class="col s3">
-          <img src="/tech/grunt.png">
+          <img src="grunt.png">
         </div>
         <div class="col s3">
-          <img src="/tech/html5.png">
+          <img src="html5.png">
         </div>
         <div class="col s3">
-          <img src="/tech/javascript.png">
+          <img src="javascript.png">
         </div>
         <div class="col s3">
-          <img src="/tech/jquery.png">
+          <img src="jquery.png">
         </div>
         <div class="col s3">
-          <img src="/tech/materialize.png">
+          <img src="materialize.png">
         </div>
         <div class="col s3">
-          <img src="/tech/moqups.png">
+          <img src="moqups.png">
         </div>
         <div class="col s3">
-          <img src="/tech/npm.png">
+          <img src="npm.png">
         </div>
         <div class="col s3">
-          <img src="/tech/sass.png">
+          <img src="sass.png">
         </div>
         <div class="col s3">
-          <img src="/tech/sql.png">
+          <img src="sql.png">
         </div>
         <div class="col s3">
-          <img src="/tech/structuremap.png">
+          <img src="structuremap.png">
         </div>
         <div class="col s3">
-          <img src="/tech/Trello.png">
+          <img src="Trello.png">
         </div>
       </div>
 
