--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
           <div class="icon-block">
             
             <h5 class="center">HomeWork</h5>
-
+            <img src="">
 
             <p class="light">A homework tracking app that parents can use to monitor the progress of all of their children.  Using a points based reward system, HomeWork motivates kids to complete assignments in a timely manner and encourages them to read outside of school.</p>
-            <p class="center"><a href="#">Project Link: Coming Soon!</a></p>
+            <p class="center"><a href="https://github.com/sward42/Homework-capstone">See the Code</a></p>
           </div>
         </div>
 
@@ -97,9 +97,10 @@
           <div class="icon-block">
             
             <h5 class="center">Nights Out Nashville</h5>
+            <img src="">
 
             <p class="light">For all of the many weekend tourists, busy young professionals, or parents who may only get one night out a month, Nights Out Nashville allows you to plan your evening in advance to maximize the time you have.  Using Google Maps API you can choose your destinations and generate a custom itinerary and mapped route.</p>
-            <p class="center"><a href="#">Project Link: Coming Soon!</a></p>
+            <p class="center"><a href="https://github.com/sward42/NightOut">See the Code</a></p>
           </div>
         </div>
       </div>
@@ -193,7 +194,7 @@
     <div class="container" id="contact">
       <div class="row center">
         <div class="col s12">
-          <h5 class="white-text">Contact Information</h5>
+          <h5 class="white-text">Contact</h5>
           <p class="grey-text text-lighten-4"><a href="https://www.linkedin.com/in/sarah-ward-75623032">LinkedIn</a> </p>
           <p class="grey-text text-lighten-4"><a href="https://github.com/sward42">GitHub</a></p>
           <p class="grey-text text-lighten-4">sarahward42@gmail.com</p>
